--- a/app/src/main/res/drawable/bg_round5dp_grey_ccc.xml
+++ b/app/src/main/res/drawable/bg_round5dp_grey_ccc.xml
@@ -4,9 +4,6 @@
     android:useLevel="false">
 
 
-    <corners android:radius="100dp" />
-
-    <stroke android:color="@color/color_ccc"
-        android:width="1px"/>
-
+    <solid android:color="@color/color_ccc" />
+    <corners android:radius="5dp" />
 </shape>
