--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -2,132 +2,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/color_F5F5F5"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_chengse"/>
-
     <View
-        android:id="@+id/statusheight"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
-
-
+        android:layout_height="@dimen/bg_white_grey"
+        android:background="@drawable/bg_gradient_white_grey" />
 
     <ImageButton
         android:id="@+id/iv_back"
         android:layout_width="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_below="@+id/statusheight"
         android:layout_height="@dimen/title_bar_height"
         android:background="@color/transparent"
-        android:src="@drawable/icon_back_bai" />
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:src="@drawable/icon_back_anse" />
 
     <TextView
         android:id="@+id/toolbar_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/title_bar_height"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_below="@+id/statusheight"
+        android:layout_centerHorizontal="true"
         android:ellipsize="end"
         android:gravity="center"
-        android:textStyle="bold"
         android:maxLines="1"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:text="我的订单"
+        android:textColor="@color/color_282626"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-
-
-
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_order"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:paddingLeft="10dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:elevation="5dp">
+        android:layout_height="30dp"
+        android:elevation="0dp"
+        android:layout_below="@id/toolbar_title"
+        app:tabBackground="@android:color/transparent"
+        app:tabRippleColor = "@android:color/transparent"
+        app:tabIndicator="@drawable/line_tab_indicator"
+        app:tabIndicatorColor="@color/color_FF6100"
+        app:tabIndicatorFullWidth="false"
+        app:tabIndicatorGravity="bottom"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/color_272525"
+        app:tabTextColor="@color/color_7B7777" />
 
-
-        <TextView
-            android:id="@+id/tv_heji"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:text="合计:"
-            android:textColor="@color/color_282626"
-            android:textSize="12sp" />
-
-
-        <TextView
-            android:id="@+id/tv_heji_money"
-            app:layout_constraintLeft_toRightOf="@+id/tv_heji"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="¥10"
-            android:textColor="@color/color_FF564A"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_youhui"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_heji"
-            app:layout_constraintTop_toBottomOf="@+id/tv_heji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:text="共计优惠："
-            android:textColor="@color/color_FF564A"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_youhui_value"
-            app:layout_constraintLeft_toRightOf="@+id/tv_youhui"
-            app:layout_constraintTop_toBottomOf="@+id/tv_heji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-2dp"
-            android:textStyle="bold"
-            android:text="¥10"
-            android:textColor="@color/color_FF564A"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_confirm"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="100dp"
-            android:layout_height="33dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/btn_gradient_yellow_round"
-            android:gravity="center"
-            android:text="提交订单"
-            android:textColor="@color/white"
-            android:textSize="17sp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_below="@+id/toolbar_title"
-        android:layout_above="@+id/cl_order"
-        android:layout_marginTop="15dp"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_below="@+id/tabLayout"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
