--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -171,6 +171,8 @@
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:elevation="0dp"
+                app:tabBackground="@android:color/transparent"
+                app:tabRippleColor = "@android:color/transparent"
                 app:tabGravity="start"
                 app:tabIndicator="@drawable/line_tab_indicator"
                 app:tabIndicatorColor="@color/color_FF6100"
