--- a/app/src/main/res/layout/head_fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/head_fragment_chart_nodata.xml
@@ -51,6 +51,7 @@
             android:layout_marginTop="25dp"
             android:gravity="center"
             android:textSize="17sp"
+            android:textStyle="bold"
             android:background="@drawable/btn_stroke_yellow"
             android:textColor="@color/FF6200"
             android:layout_gravity="center_horizontal"
