--- a/app/src/main/res/layout/foot_orderdetail.xml
+++ b/app/src/main/res/layout/foot_orderdetail.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingBottom="25dp"
+        android:paddingBottom="15dp"
         android:paddingTop="15dp">
 
         <TextView
@@ -167,10 +167,10 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingBottom="25dp"
+        android:paddingBottom="15dp"
         android:paddingTop="15dp">
 
         <TextView
@@ -342,4 +342,32 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    <LinearLayout
+        android:id="@+id/ll_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:visibility="gone"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:textSize="17sp"
+            android:textColor="@color/FF6200"
+            android:gravity="center"
+            android:background="@drawable/btn_stroke_yellow"
+            android:text="联系商家"/>
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:textSize="17sp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/btn_gradient_yellow_round"
+            android:text="再来一单"/>
+    </LinearLayout>
 </LinearLayout>
