--- a/app/src/main/res/layout/head_orderdetail_tuikuan.xml
+++ b/app/src/main/res/layout/head_orderdetail_tuikuan.xml
@@ -9,12 +9,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round10dp_white"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_282525"
+            android:textSize="13sp"
+            android:text="退款金额：15.9元"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_7C7877"
+            android:textSize="13sp"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/icon_link"
+            android:text="退款中"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_round10dp_white"
         android:orientation="vertical"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingBottom="25dp"
+        android:paddingBottom="20dp"
         android:paddingTop="15dp">
 
         <TextView
@@ -27,8 +62,10 @@
 
 
         <LinearLayout
+            android:id="@+id/ll_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/view_line"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
@@ -41,8 +78,8 @@
                 android:textStyle="bold"
                 android:drawablePadding="8dp"
                 android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/FF6200"
-                android:text="再来一单"/>
+                android:textColor="@color/color_3B3838"
+                android:text="取消订单"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -52,8 +89,8 @@
                 android:textStyle="bold"
                 android:drawablePadding="8dp"
                 android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/FF6200"
-                android:text="评价得积分"/>
+                android:textColor="@color/color_ccc"
+                android:text="催单"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -64,10 +101,12 @@
                 android:drawablePadding="8dp"
                 android:drawableTop="@drawable/icon_link"
                 android:textColor="@color/color_3B3838"
-                android:text="申请售后"/>
+                android:text="改订单信息"/>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_2"
+            android:layout_below="@+id/ll_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -83,7 +122,7 @@
                 android:drawablePadding="8dp"
                 android:drawableTop="@drawable/icon_link"
                 android:textColor="@color/color_3B3838"
-                android:text="联系商家"/>
+                android:text="联系骑手"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -94,7 +133,7 @@
                 android:drawablePadding="8dp"
                 android:drawableTop="@drawable/icon_link"
                 android:textColor="@color/color_3B3838"
-                android:text="联系骑手"/>
+                android:text="联系商家"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -106,22 +145,6 @@
         </LinearLayout>
     </LinearLayout>
 
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_round10dp_white"
-        android:orientation="vertical"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp"
-        android:textColor="@color/color_282525"
-        android:textSize="13sp"
-        android:drawableRight="@drawable/icon_link"
-        android:text="我的评价"/>
+    <include layout="@layout/item_orderdetail_head"/>
 
 </LinearLayout>
