--- a/app/src/main/res/layout/item_orderdetail_head.xml
+++ b/app/src/main/res/layout/item_orderdetail_head.xml
@@ -1,55 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+
+    <TextView
+        android:id="@+id/tv_des"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round10dp_white"
         android:orientation="vertical"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:textColor="@color/color_282525"
+        android:textSize="13sp"
+        android:text="15分钟内未支付，订单将自动取消"/>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_round10dp_white"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="20dp"
+        android:paddingTop="15dp">
 
         <TextView
-            android:id="@+id/tv_1"
+            android:id="@+id/tv_jingkuai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
             android:textStyle="bold"
             android:textColor="@color/color_282626"
-            android:textSize="20sp"
-            android:text="购买配送卡省钱事"/>
+            android:textSize="15sp"
+            android:text="请尽快支付"/>
 
         <TextView
-            android:id="@+id/tv_2"
+            android:id="@+id/zhuansong"
+            android:layout_below="@+id/tv_jingkuai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_7C7877"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_below="@+id/tv_1"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="4dp"
             android:textSize="12sp"
-            android:text="一人购卡，全家使用"/>
+            android:text="趣鲜蜂专送"/>
 
+        <ImageView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="fitXY"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/food2"/>
 
-        <TextView
-            android:id="@+id/tv_3"
-            android:layout_width="wrap_content"
+        <View
+            android:id="@+id/view_line"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_below="@+id/zhuansong"
+            android:background="@color/color_F5F5F5"
+            android:layout_marginTop="15dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_toRightOf="@+id/tv_2"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:background="@drawable/btn_gradient_yellow_round"
-            android:layout_below="@+id/tv_1"
-            android:textSize="14sp"
-            android:text="立即购买"/>
+            android:layout_below="@+id/view_line"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_cancel_waite"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:drawablePadding="8dp"
+                android:drawableTop="@drawable/icon_link"
+                android:textColor="@color/color_3B3838"
+                android:text="取消订单"/>
+            <TextView
+                android:id="@+id/tv_contact_waite"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:drawablePadding="8dp"
+                android:drawableTop="@drawable/icon_link"
+                android:textColor="@color/color_3B3838"
+                android:text="联系商家"/>
+            <TextView
+                android:id="@+id/tv_pay_waite"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="13sp"
+                android:drawablePadding="8dp"
+                android:drawableTop="@drawable/icon_link"
+                android:textColor="@color/FF6200"
+                android:text="立即支付"/>
+        </LinearLayout>
+
 
     </RelativeLayout>
+</LinearLayout>
