--- a/app/src/main/res/layout/dialog_order_detail_trace.xml
+++ b/app/src/main/res/layout/dialog_order_detail_trace.xml
@@ -31,6 +31,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="28dp"
         android:layout_below="@+id/tv_title"
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
