--- a/app/src/main/res/layout/item_order_detail_trace.xml
+++ b/app/src/main/res/layout/item_order_detail_trace.xml
@@ -8,9 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="28dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/dian"
@@ -48,7 +46,7 @@
             android:text="07-22 11:29" />
     </RelativeLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -58,7 +56,7 @@
             android:layout_height="28dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:layout_marginLeft="33dp"
+            android:layout_marginLeft="4dp"
             android:background="@color/color_F5F5F5" />
 
         <TextView
@@ -66,13 +64,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:gravity="center_vertical"
             android:lineSpacingMultiplier="1.3"
             android:textSize="12sp"
             android:textColor="@color/color_7C7877"
             tools:text="" />
 
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
