--- a/app/src/main/res/drawable/bg_new_address.xml
+++ b/app/src/main/res/drawable/bg_new_address.xml
@@ -4,17 +4,25 @@
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="#20FF6200" />
+            <solid android:color="#20FF564A" />
             <stroke android:width="1px"
-                android:color="@color/FF6200"/>
+                android:color="@color/color_FF564A"/>
+            <corners android:radius="2dp"/>
+        </shape>
+    </item>
+    <item android:state_selected="true">
+        <shape>
+            <solid android:color="#20FF564A" />
+            <stroke android:width="1px"
+                android:color="@color/color_FF564A"/>
             <corners android:radius="2dp"/>
         </shape>
     </item>
     <item android:state_checked="true">
         <shape>
-            <solid android:color="#20FF6200" />
+            <solid android:color="#20FF564A" />
             <stroke android:width="1px"
-                android:color="@color/FF6200"/>
+                android:color="@color/color_FF564A"/>
             <corners android:radius="2dp"/>
         </shape>
     </item>
