--- a/app/src/main/res/layout/activity_ordering.xml
+++ b/app/src/main/res/layout/activity_ordering.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
 
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
-        android:src="@drawable/bg_chengse"/>
+        android:src="@drawable/bg_chengse" />
 
     <View
         android:id="@+id/statusheight"
@@ -19,115 +18,45 @@
         android:layout_height="0dp" />
 
 
-
     <ImageButton
         android:id="@+id/iv_back"
         android:layout_width="wrap_content"
+        android:layout_height="@dimen/title_bar_height"
+        android:layout_below="@+id/statusheight"
+        android:background="@color/transparent"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_below="@+id/statusheight"
-        android:layout_height="@dimen/title_bar_height"
-        android:background="@color/transparent"
         android:src="@drawable/icon_back_bai" />
 
     <TextView
         android:id="@+id/toolbar_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height"
+        android:layout_below="@+id/statusheight"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_below="@+id/statusheight"
         android:ellipsize="end"
         android:gravity="center"
-        android:textStyle="bold"
         android:maxLines="1"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 
-
-
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <include
         android:id="@+id/cl_order"
+        layout="@layout/item_bottom_commit"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:paddingLeft="10dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:elevation="5dp">
+        android:layout_alignParentBottom="true" />
 
-
-        <TextView
-            android:id="@+id/tv_heji"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:text="合计:"
-            android:textColor="@color/color_282626"
-            android:textSize="12sp" />
-
-
-        <TextView
-            android:id="@+id/tv_heji_money"
-            app:layout_constraintLeft_toRightOf="@+id/tv_heji"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="¥10"
-            android:textColor="@color/color_FF564A"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_youhui"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_heji"
-            app:layout_constraintTop_toBottomOf="@+id/tv_heji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:text="共计优惠："
-            android:textColor="@color/color_FF564A"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_youhui_value"
-            app:layout_constraintLeft_toRightOf="@+id/tv_youhui"
-            app:layout_constraintTop_toBottomOf="@+id/tv_heji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-2dp"
-            android:textStyle="bold"
-            android:text="¥10"
-            android:textColor="@color/color_FF564A"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_confirm"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="100dp"
-            android:layout_height="33dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/btn_gradient_yellow_round"
-            android:gravity="center"
-            android:text="提交订单"
-            android:textColor="@color/white"
-            android:textSize="17sp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_below="@+id/toolbar_title"
-        android:layout_above="@+id/cl_order"
-        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/cl_order"
+        android:layout_below="@+id/toolbar_title"
+        android:layout_marginTop="15dp" />
 </RelativeLayout>
