--- a/app/src/main/res/layout/activity_shouhou.xml
+++ b/app/src/main/res/layout/activity_shouhou.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/color_F5F5F5"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -25,17 +25,32 @@
         android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/title_bar_height"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_centerHorizontal="true"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:text="我的订单"
+        android:text="申请售后"
         android:textColor="@color/color_282626"
         android:textSize="18sp"
         android:textStyle="bold" />
 
 
+    <include
+        android:id="@+id/cl_order"
+        layout="@layout/item_bottom_commit"
+        android:layout_width="match_parent"
+
+        android:layout_height="44dp"
+        android:layout_alignParentBottom="true" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_below="@+id/toolbar_title"
+        android:layout_above="@+id/cl_order"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
