--- a/app/src/main/res/layout/dialog_order_detail_trace.xml
+++ b/app/src/main/res/layout/dialog_order_detail_trace.xml
@@ -35,6 +35,7 @@
         android:layout_marginRight="28dp"
         android:layout_below="@+id/tv_title"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
