--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,5 +39,6 @@
     <color name="color_f9f9f9">#f9f9f9</color>
 
     <color name="color_3e7dfb">#3e7dfb</color>
+    <color name="color_8D99AE">#8D99AE</color>
 
 </resources>
