--- a/app/src/main/res/layout/activity_order_comment.xml
+++ b/app/src/main/res/layout/activity_order_comment.xml
@@ -435,6 +435,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
+                android:id="@+id/tv_tijiao"
                 android:layout_width="290dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
