--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="title_bar_shadow_height">47dp</dimen>
     <dimen name="title_bar_height">44dp</dimen>
     <dimen name="bg_white_grey">120dp</dimen>
+    <dimen name="bg_orange">190dp</dimen>
 </resources>
