--- a/app/src/main/res/layout/activity_pay_status.xml
+++ b/app/src/main/res/layout/activity_pay_status.xml
@@ -39,8 +39,9 @@
     <ImageView
         android:id="@+id/iv_icon"
         android:layout_marginTop="125dp"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_zhifuchenggong"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
