--- a/app/src/main/res/layout/dialog_pay.xml
+++ b/app/src/main/res/layout/dialog_pay.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="30dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_topround20dp_white">
 
@@ -31,18 +30,30 @@
         android:layout_marginTop="20dp"
         android:text="请输入支付密码"/>
 
-    <TextView
-        android:id="@+id/tv_pay"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="47dp"
-        android:layout_marginRight="47dp"
-        android:text="米粒支付¥10"
-        android:gravity="center"
-        android:textSize="17sp"
-        android:background="@drawable/btn_gradient_yellow_round"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pay_title"
+<!--    <TextView-->
+<!--        android:id="@+id/tv_pay"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_marginLeft="47dp"-->
+<!--        android:layout_marginRight="47dp"-->
+<!--        android:text="米粒支付¥10"-->
+<!--        android:gravity="center"-->
+<!--        android:textSize="17sp"-->
+<!--        android:background="@drawable/btn_gradient_yellow_round"-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tv_pay_title"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        android:textColor="@color/white"/>-->
+
+
+
+    <com.bee.user.widget.PayPassView
+        android:id="@+id/paypassview"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:textColor="@color/white"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_pay_title"
+        android:layout_marginTop="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
