--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="white">#ffffff</color>
 
     <color name="color_000_c">#cc000000</color>
+    <color name="color_000">#000000</color>
 
     <color name="color_282626">#282626</color>
     <color name="color_ccc">#CCCCCC</color>
