--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,4 +74,15 @@
         <item name="android:windowExitAnimation">@anim/push_out</item>
     </style>
 
+
+
+
+    <style name="InputTextView">
+        <item name="android:textColor">@color/color_000</item>
+        <item name="android:gravity">center</item>
+        <item name="android:inputType">textPassword</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/bg_pay_text_stroke</item>
+    </style>
 </resources>
