--- a/app/src/main/res/layout/activity_mili.xml
+++ b/app/src/main/res/layout/activity_mili.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="270dp"
         android:scaleType="fitXY"
         android:src="@drawable/bg_chengse"/>
 
@@ -58,6 +59,64 @@
         android:textSize="13sp" />
 
 
+    <TextView
+        android:id="@+id/tv_mili"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar_title"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:text="0.00"
+        android:textColor="@color/white"
+        android:textSize="40sp" />
 
+    <TextView
+        android:id="@+id/tv_mili_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_mili"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="6dp"
+        android:text="米粒余额"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_mili_text"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/bg_round10dp_white">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:elevation="0dp"
+            app:tabBackground="@android:color/transparent"
+            app:tabRippleColor = "@android:color/transparent"
+            app:tabIndicator="@drawable/line_tab_indicator"
+            app:tabIndicatorColor="@color/color_FF6100"
+            app:tabIndicatorFullWidth="true"
+            app:tabIndicatorGravity="bottom"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/FF6200"
+            app:tabTextColor="@color/color_282626" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </RelativeLayout>
