--- a/app/src/main/res/drawable/selector_pay_del.xml
+++ b/app/src/main/res/drawable/selector_pay_del.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:state_enabled="true" android:state_pressed="true">
         <shape>
-            <solid android:color="#d0ced1"/>
+            <solid android:color="#f5f5f5"/>
         </shape>
     </item>
 </selector>
