--- a/app/src/main/res/layout/activity_mili.xml
+++ b/app/src/main/res/layout/activity_mili.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
 
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="270dp"
+        android:layout_height="wrap_content"
         android:scaleType="fitXY"
-        android:src="@drawable/bg_chengse"/>
+        android:src="@drawable/bg_chang" />
 
     <View
         android:id="@+id/statusheight"
@@ -19,41 +18,40 @@
         android:layout_height="0dp" />
 
 
-
     <ImageButton
         android:id="@+id/iv_back"
         android:layout_width="wrap_content"
+        android:layout_height="@dimen/title_bar_height"
+        android:layout_below="@+id/statusheight"
+        android:background="@color/transparent"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_below="@+id/statusheight"
-        android:layout_height="@dimen/title_bar_height"
-        android:background="@color/transparent"
         android:src="@drawable/icon_back_bai" />
 
     <TextView
         android:id="@+id/toolbar_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height"
+        android:layout_below="@+id/statusheight"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_below="@+id/statusheight"
         android:ellipsize="end"
         android:gravity="center"
-        android:textStyle="bold"
         android:maxLines="1"
         android:text="我的米粒"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/trade_list"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/title_bar_height"
-        android:layout_marginRight="10dp"
         android:layout_below="@+id/statusheight"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
         android:ellipsize="end"
         android:gravity="center"
-        android:layout_alignParentRight="true"
         android:text="交易记录"
         android:textColor="@color/white"
         android:textSize="13sp" />
@@ -64,59 +62,114 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar_title"
-        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textStyle="bold"
+        android:gravity="center"
         android:text="0.00"
         android:textColor="@color/white"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_mili_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_mili"
-        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="6dp"
+        android:gravity="center"
         android:text="米粒余额"
         android:textColor="@color/white"
         android:textSize="14sp" />
 
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_mili_text"
-        android:orientation="vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/bg_round10dp_white">
+        android:scrollbars="none">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:elevation="0dp"
-            app:tabBackground="@android:color/transparent"
-            app:tabRippleColor = "@android:color/transparent"
-            app:tabIndicator="@drawable/line_tab_indicator"
-            app:tabIndicatorColor="@color/color_FF6100"
-            app:tabIndicatorFullWidth="true"
-            app:tabIndicatorGravity="bottom"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/FF6200"
-            app:tabTextColor="@color/color_282626" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ll_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_round10dp_white"
+                android:orientation="vertical">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:elevation="0dp"
+                    app:tabBackground="@android:color/transparent"
+                    app:tabIndicator="@drawable/line_tab_indicator"
+                    app:tabIndicatorColor="@color/color_FF6100"
+                    app:tabIndicatorFullWidth="true"
+                    app:tabIndicatorGravity="bottom"
+                    app:tabMode="fixed"
+                    app:tabRippleColor="@android:color/transparent"
+                    app:tabSelectedTextColor="@color/FF6200"
+                    app:tabTextColor="@color/color_282626" />
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ll_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/bg_round10dp_white"
+                android:orientation="vertical"
+                android:paddingLeft="10dp"
+                android:paddingTop="20dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="30dp">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="充值说明："
+                    android:textColor="@color/color_3C3838"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:lineSpacingExtra="8dp"
+                    android:text="1、此处充值支持“趣鲜蜂充值卡、代金券”的余额充值转存到会员账户中；
+\n2、请按要求输入充值卡或代金券码，点击“立即兑换”，即可将充值卡或代金券内余额一次性转入到会员账户下；
+\n3、余额转入会员账户后，充值卡或代金券作废，不支持再从手机会员账户中转回；
+\n4、会员余额可在趣鲜蜂APP消费使用。
+\n5、如有疑问请拨打客服电话：400-XXX-XXXX.。
+                            "
+                    android:textColor="@color/color_7C7877"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
