--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,5 @@
     <color name="color_3e7dfb">#3e7dfb</color>
     <color name="color_8D99AE">#8D99AE</color>
 
+    <color name="color_666">#666666</color>
 </resources>
