--- a/app/src/main/res/layout/activity_trade_list.xml
+++ b/app/src/main/res/layout/activity_trade_list.xml
@@ -18,7 +18,7 @@
         android:background="@color/transparent"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:src="@drawable/icon_guanbi"
+        android:src="@drawable/icon_back_anse"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,13 +52,36 @@
         android:textColor="@color/color_282626"
         android:textSize="13sp" />
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/color_282525"
+        android:text="近一年交易记录"/>
+
+
+    <com.huaxiafinance.www.crecyclerview.crecyclerView.CRecyclerView
+        android:id="@+id/crecyclerview"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_time"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"/>
+
+    <View
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:alpha="0"
+        android:visibility="gone"
+        android:background="#99000000"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
