--- a/app/src/main/res/layout/head_orderdetail_tuikuan.xml
+++ b/app/src/main/res/layout/head_orderdetail_tuikuan.xml
@@ -60,89 +60,16 @@
             android:textSize="17sp"
             android:text="感谢您对趣鲜蜂的信任，期待再次光临！"/>
 
-
-        <LinearLayout
-            android:id="@+id/ll_1"
+        <com.bee.user.widget.MyGridView
+            android:id="@+id/gridview_tuikuan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view_line"
             android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textStyle="bold"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/color_3B3838"
-                android:text="取消订单"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textStyle="bold"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/color_ccc"
-                android:text="催单"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textSize="13sp"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/color_3B3838"
-                android:text="改订单信息"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_2"
-            android:layout_below="@+id/ll_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textStyle="bold"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/color_3B3838"
-                android:text="联系骑手"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textSize="13sp"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/color_3B3838"
-                android:text="联系商家"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textColor="@color/color_3B3838"
-                android:text=""/>
-        </LinearLayout>
+            android:verticalSpacing="20dp"
+            android:cacheColorHint="@color/white"
+            android:scrollbars="none"
+            android:numColumns="3"/>
     </LinearLayout>
 
     <include layout="@layout/item_orderdetail_head_card"/>
