--- a/app/src/main/res/layout/item_orderdetail_head.xml
+++ b/app/src/main/res/layout/item_orderdetail_head.xml
@@ -68,51 +68,16 @@
             android:background="@color/color_F5F5F5"
             android:layout_marginTop="15dp"/>
 
-        <LinearLayout
+        <com.bee.user.widget.MyGridView
+            android:id="@+id/gridview_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view_line"
             android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_cancel_waite"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textStyle="bold"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/color_3B3838"
-                android:text="取消订单"/>
-            <TextView
-                android:id="@+id/tv_contact_waite"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textStyle="bold"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/color_3B3838"
-                android:text="联系商家"/>
-            <TextView
-                android:id="@+id/tv_pay_waite"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textSize="13sp"
-                android:drawablePadding="8dp"
-                android:drawableTop="@drawable/icon_link"
-                android:textColor="@color/FF6200"
-                android:text="立即支付"/>
-        </LinearLayout>
-
+            android:verticalSpacing="20dp"
+            android:cacheColorHint="@color/white"
+            android:scrollbars="none"
+            android:numColumns="3"/>
 
     </RelativeLayout>
 </LinearLayout>
